--- a/SIHRDmodel with variability.Rmd
+++ b/SIHRDmodel with variability.Rmd
@@ -280,25 +280,32 @@ At the end of the first day, for the new 7 cases, $7 \times 0.8 = 5$ will be adm
 ```{r}
 I.0 = 5
 S.rate = 0.5
+
 # List of Explanatory Variables:
 Pop.Lst = c(10000, 100000, 1000000)
-Beta.Lst = c(1, 2, 4)
+Beta.Lst = c(2,4)
 Hrate.Lst = c(0.05, 0.1, 0.15)
 RrateH.Lst = c(0.9, 0.95)
 RrateNH.Lst = c(0.9, 0.95)
 TimeH.Lst = c(10, 15)
 TimeNH.Lst = c(1, 5)
+
 #Pop.Lst, Beta.Lst, Hrate.Lst, RrateH.Lst, RrateNH.Lst, TimeH.Lst, TimeNH.Lst
 result_table = data.frame()
-for(N in Pop.Lst){
-  for(b in Beta.Lst){
-    for(hr in Hrate.Lst){
-      for(rrh in RrateH.Lst){
-        for(rrnh in RrateNH.Lst){
-          for(th in TimeH.Lst){
-            for(tnh in TimeNH.Lst){
-              model = SIRHD.model(N, b, I.0, S.rate, hr, rrh, rrnh, th, tnh)
-              result_table = rbind(result_table, model[[3]], stringsAsFactors = FALSE)
+
+# Run 10 simulations of every 288 combinations
+sims = 10
+for(i in 1:sims){
+  for(N in Pop.Lst){
+    for(b in Beta.Lst){
+      for(hr in Hrate.Lst){
+        for(rrh in RrateH.Lst){
+          for(rrnh in RrateNH.Lst){
+            for(th in TimeH.Lst){
+              for(tnh in TimeNH.Lst){
+                model = SIRHD.model(N, b, I.0, S.rate, hr, rrh, rrnh, th, tnh)
+                result_table = rbind(result_table, model[[3]], stringsAsFactors = FALSE)
+              }
             }
           }
         }
@@ -306,42 +313,115 @@ for(N in Pop.Lst){
     }
   }
 }
+
 colnames(result_table) = c("Population", "Beta", "HospitalizationRate", "HospitalizedRecoveryRate", "NonHospitalizedRecoveryRate", "HospitalizationTime", "InfectionTime", "LastDay", "Status", "TotalDeath", "TotalInfected", "MaxNewCase", "PeakDayNewCase", "MaxInHospital", "PeakDayHospital")
 result_table[1:7] = as.data.frame(sapply(result_table[1:7], as.numeric))
 result_table[1:7] = format(result_table[1:7], scientific = FALSE)
 result_table[c(1:7,9)] = as.data.frame(sapply(result_table[c(1:7,9)], as.factor))
 result_table[c(8,10:15)] = as.data.frame(sapply(result_table[c(8,10:15)], as.numeric))
+
 numericPop = as.numeric(as.character(result_table$Population))
+
 result_table$DeathProportion = result_table$TotalDeath / numericPop
 result_table$InfectedProportion = result_table$TotalInfected / numericPop
 result_table$MaxCaseProportion = result_table$MaxNewCase / numericPop
 result_table$MaxHospitalProportion = result_table$MaxInHospital / numericPop
-
-result_table <- result_table[-c(16:27)]
+result_table
 ```
 
 #### Response Variable: Total Death Proportion
 
 ```{r}
+# Full model without interaction
 Death.Anova = aov(DeathProportion ~ Population + Beta + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table) 
 summary(Death.Anova)
+
+# Reduced model with interaction between significant variables from full model
+Death.Anova1 = aov(DeathProportion ~ Beta + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + InfectionTime 
+                   + Beta*HospitalizedRecoveryRate + Beta*NonHospitalizedRecoveryRate + Beta*InfectionTime 
+                   + HospitalizedRecoveryRate*NonHospitalizedRecoveryRate + HospitalizedRecoveryRate*InfectionTime + NonHospitalizedRecoveryRate*InfectionTime, 
+                   data = result_table)
+summary(Death.Anova1)
+
+# Summarize main effects of each significant variable
+avg.Beta = result_table %>% group_by(Beta) %>% summarise(Average.Death.Proportion = mean(DeathProportion))
+avg.InfectionTime = result_table %>% group_by(InfectionTime) %>% summarise(Average.Death.Proportion = mean(DeathProportion))
+avg.HospitalizedRecoveryRate = result_table %>% group_by(HospitalizedRecoveryRate) %>% summarise(Average.Death.Proportion = mean(DeathProportion))
+avg.NonHospitalizedRecoveryRate = result_table %>% group_by(NonHospitalizedRecoveryRate) %>% summarise(Average.Death.Proportion = mean(DeathProportion))
+
+avg.Beta$Var = "Beta"
+names(avg.Beta) = c("Level", "Average.Death.Proportion", "Var")
+
+avg.HospitalizedRecoveryRate$Var = "Hospitalization Recovery Rate"
+names(avg.HospitalizedRecoveryRate) = c("Level", "Average.Death.Proportion", "Var")
+
+avg.NonHospitalizedRecoveryRate$Var = "Non-Hospitalization Recovery Rate"
+names(avg.NonHospitalizedRecoveryRate) = c("Level", "Average.Death.Proportion", "Var")
+
+avg.InfectionTime$Var = "Infection Time"
+names(avg.InfectionTime) = c("Level", "Average.Death.Proportion", "Var")
+
+avg.all = rbind(avg.Beta, avg.HospitalizedRecoveryRate, avg.NonHospitalizedRecoveryRate, avg.InfectionTime)
+
+# Main Effect Plots
+ggplot(avg.all, aes(x = Level, y = Average.Death.Proportion, group = Var)) + 
+  geom_line() +
+  geom_point() + 
+  facet_grid(cols = vars(Var), scales = "free_x") + 
+  theme_bw() + 
+  ggtitle("Main Effects Plot for Total Infected Proportion") + 
+  geom_hline(yintercept = mean(result_table$DeathProportion))
+
+# Summarize interaction effects by all combinations of significant variables
+DeathSummary = result_table %>% group_by(Beta, InfectionTime, HospitalizedRecoveryRate, NonHospitalizedRecoveryRate) %>% summarise(Average.Death.Proportion = mean(DeathProportion))
+
+# New facet label names for dose variable
+InfectionTime.labs <- c("With quarantine", "Without quarantine")
+names(InfectionTime.labs) <- c("1", "5")
+
+# New facet label names for supp variable
+Beta.labs <- c("Beta = 2", "Beta = 4")
+names(Beta.labs) <- c("2", "4")
+
+# Interaction Plot
+ggplot(DeathSummary, 
+       aes(x = NonHospitalizedRecoveryRate, 
+           y = Average.Death.Proportion,
+           color = HospitalizedRecoveryRate,
+           group = HospitalizedRecoveryRate)) +
+  geom_point() + 
+  geom_line() +
+  facet_grid(Beta ~ InfectionTime, labeller = labeller(InfectionTime = InfectionTime.labs, Beta = Beta.labs)) +
+  # geom_point(aes(color = HospitalizedRecoveryRate)) + 
+  theme_bw() + 
+  ggtitle("Interaction Plot for Infected Proportion")
 ```
 
 #### Response Variable: Total Infected Proportion
 
 ```{r}
+# Full model without interaction
 Infected.Anova = aov(InfectedProportion ~ Population + Beta + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table)
 summary(Infected.Anova)
-Infected.Anova1 = aov(InfectedProportion ~ Population * Beta * InfectionTime, data = result_table)
+
+# Reduced model with interaction between significant variables from full model
+Infected.Anova1 = aov(InfectedProportion ~ Beta + HospitalizationRate + InfectionTime 
+                      + Beta*HospitalizationRate + Beta*InfectionTime + HospitalizationRate*InfectionTime, 
+                      data = result_table)
 summary(Infected.Anova1)
+
+# Summarize main effects of each significant variable
 avg.Beta = result_table %>% group_by(Beta) %>% summarise(Average.Infected.Proportion = mean(InfectedProportion))
 avg.InfectionTime = result_table %>% group_by(InfectionTime) %>% summarise(Average.Infected.Proportion = mean(InfectedProportion))
-# Tidy and combine two summary tables
-avg.Beta$Var = "Transmission Rate"
+avg.HospitalizationRate = result_table %>% group_by(HospitalizationRate) %>% summarise(Average.Infected.Proportion = mean(InfectedProportion))
+avg.Beta$Var = "Beta"
 names(avg.Beta) = c("Level", "Average.Infected.Proportion", "Var")
+avg.HospitalizationRate$Var = "Hospitalization Rate"
+names(avg.HospitalizationRate) = c("Level", "Average.Infected.Proportion", "Var")
 avg.InfectionTime$Var = "Infection Time"
 names(avg.InfectionTime) = c("Level", "Average.Infected.Proportion", "Var")
-avg.all = rbind(avg.Beta, avg.InfectionTime)
+avg.all = rbind(avg.Beta, avg.HospitalizationRate, avg.InfectionTime)
+
 # Main Effect Plots
 ggplot(avg.all, aes(x = Level, y = Average.Infected.Proportion, group = Var)) + 
   geom_line() +
@@ -350,16 +430,23 @@ ggplot(avg.all, aes(x = Level, y = Average.Infected.Proportion, group = Var)) +
   theme_bw() + 
   ggtitle("Main Effects Plot for Total Infected Proportion") + 
   geom_hline(yintercept = mean(result_table$InfectedProportion))
-# Summarize by both variables
-InfectedSummary = result_table %>% group_by(Beta, InfectionTime) %>% summarise(Average.Infected.Proportion = mean(InfectedProportion))
+
+# Summarize interaction effects by all combinations of significant variables
+InfectedSummary = result_table %>% group_by(Beta, InfectionTime, HospitalizationRate) %>% summarise(Average.Infected.Proportion = mean(InfectedProportion))
+
+# New facet label names for dose variable
+InfectionTime.labs <- c("With quarantine", "Without quarantine")
+names(InfectionTime.labs) <- c("1", "5")
+
 # Interaction Plot
 ggplot(InfectedSummary, 
-       aes(x = Beta, 
+       aes(x = HospitalizationRate, 
            y = Average.Infected.Proportion, 
-           group = InfectionTime, 
-           color = InfectionTime)) + 
-  geom_line() + 
+           group = Beta,
+           color = Beta)) + 
+  geom_line() +
   geom_point() + 
+  facet_grid(~ InfectionTime, labeller = labeller(InfectionTime = InfectionTime.labs, Beta = Beta.labs)) +
   theme_bw() + 
   ggtitle("Interaction Plot for Infected Proportion")
 ```
